--- a/Dockerfile.pytorch
+++ b/Dockerfile.pytorch
@@ -1,5 +1,5 @@
 FROM opengc
-RUN apt-get update && yes|apt-get upgrade
+RUN apt-get update 
 RUN apt-get install -y emacs
 
 # Adding wget and bzip2
@@ -8,9 +8,6 @@ RUN apt-get install -y wget bzip2
 # Add sudo
 RUN apt-get -y install sudo
 
-# Add user ubuntu with no password, add to sudo group
-
-#RUN echo `pwd`
 
 # Anaconda installing
 RUN wget https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh
@@ -24,7 +21,7 @@ RUN rm Anaconda3-2020.11-Linux-x86_64.sh
 
 
 RUN conda install numpy ninja pyyaml mkl mkl-include setuptools cmake cffi typing_extensions future six requests dataclasses
-RUN conda install -c pytorch magma-cuda100
+RUN conda install -c pytorch magma-cuda100 
 
 # Installing Pytorch
 RUN git clone --recursive https://github.com/pytorch/pytorch
@@ -36,5 +33,5 @@ RUN conda init bash
 
 ENV CMAKE_PREFIX_PATH=${CONDA_PREFIX:-"$(dirname $(which conda))/../"}
 RUN USE_ROCM=OFF python3 setup.py install
-RUN apt-get update && yes|apt-get upgrade
+RUN apt-get update 
 ## ADD benchmark Torch vision
